<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Signin">Sign in</string>
    <string name="app_name">My au</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="dummy_string">Dummy String</string>
    <string name="MODEL">list</string>
    <string name="position">position</string>
    <!-- Details -->

    <string name="Details">Details</string>
    <string name="FormNo">Form No.</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="mobphone"> Mobile/Phone </string>
    <string name="Mobile">Mobile</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="House">H.No.</string>
    <string name="Street">Street</string>
    <string name="Colony">Colony</string>
    <string name="Town">Town</string>
    <string name="Pin">PIN</string>
    <string name="Reader"> Reader </string>
    <string name="Detailbtn">Details</string>
    <string name="Profilbtn">Profile</string>
    <string name="Habitsbtn">Habits</string>
    <string name="Laterbtn">Later</string>
    <string name="Paymentbtn">Payment</string>

    <!-- Profile -->

    <string name="Profile">Profile</string>
    <string name="Designation">Designation</string>
    <string name="Occupation">Occupation</string>
    <string name="Agegroup">Age Group</string>
    <string name="Education">Education</string>
    <string name="Category">Category</string>
    <string name="Orgainization">Orgainization</string>
    <string name="IncomeGroup">Income Group</string>
    <string name="Vehicle">Vehicle</string>
    <string name="VehName">Veh Name</string>
    <string name="DurableName">Durable Name</string>
    <string name="DurableOwenership">Durable Owenership</string>

    <!-- habits -->
    <string name="habits">Subscriber Habits</string>
    <string name="reader_habit_news_paper">Reader Habit Newspaper</string>
    <string name="address_proof">Address Proof</string>

    <!-- scheme -->
    <string name="scheme">Scheme</string>
    <string name="pay_mode">Pay Mode</string>
    <string name="card_type">Card Type</string>
    <string name="card_holder_date">Card Holder Name</string>
    <string name="card_no">Card No</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="chq_date">Chq Date</string>
    <string name="chq_no">Chq No.</string>
    <string name="bank_name">Bank Name</string>
    <string name="verify">Verify OTP</string>
    <string name="amount">Amount</string>
    <string name="payment">Payment</string>

    <!-- Advt Collection -->
    <string name="advt_dts">Collection Details</string>
    <string name="advt_pttype">Payment Type:</string>
    <string name="advt_agname">Agency Name:</string>
    <!-- <string name="advt_retype">Retainer Name:</string> -->
    <string name="advt_retype">Retainer Name:</string>
    <string name="payee_mob">Payee Mobile Number:</string>
    <string name="advt_pmode">Payment Mode:</string>
    <string name="advt_chno">Cheque Number:</string>
    <string name="advt_chq_date">Cheque Date:</string>
    <string name="advt_bank">Cheque Number:</string>
    <string name="advt_bank_name">Bank Name:</string>
    <string name="advt_amt">Amount:</string>
    <string name="advt_remark">Remark:</string>
    <string name="dummy_section_text">dummy_section_text</string>
    <string name="advt_submit">Clear</string>
    <string name="title_activity_verify_sms">VerifySms</string>
    <string name="title_activity_circulation_collection">CirculationCollection</string>


    <string name="title_activity_sam">SAM</string>
    <string name="title_activity_booking_main">Booking_main</string>
    <string name="title_home">Details</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Rate Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>