<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_header" >

            <RelativeLayout
                android:id="@+id/child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/boxborder" >

                    <LinearLayout
                        android:id="@+id/tbl1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/row1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtnews"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/reader_habit_news_paper" />

                            <Spinner
                                android:id="@+id/news"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtadd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/address_proof" />

                            <Spinner
                                android:id="@+id/adds"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/txthabits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:text="@string/habits"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </RelativeLayout>
            <!-- box2- -->

            <RelativeLayout
                android:id="@+id/child4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/child" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/boxborder" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/btndetail"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Detailbtn" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/btnprofile"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Profilbtn" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/btnhabit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Habitsbtn" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/btnlater"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Laterbtn" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/btnpayment"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Paymentbtn" />

                        <TextView
                            android:layout_width="10dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtreader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:text="@string/Reader"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>