<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_header" >

            <RelativeLayout
                android:id="@+id/child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/boxborder" >

                    <LinearLayout
                        android:id="@+id/tbl1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/row1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtsch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scheme" />

                            <Spinner
                                android:id="@+id/schs"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtpay"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pay_mode" />

                            <Spinner
                                android:id="@+id/pays"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txttype"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_type" />

                            <Spinner
                                android:id="@+id/types"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtamt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/amount" />

                            <EditText
                                android:id="@+id/editamt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:textSize="8sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtholder"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_holder_date" />

                            <EditText
                                android:id="@+id/editholder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="8sp" />

                            <!-- <ImageButton
                                android:id="@+id/cardholderDate"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/calendar_icon" /> -->
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtcard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_no" />

                            <EditText
                                android:id="@+id/editcard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="8sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtexpiry"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_expiry_date" />

                            <EditText
                                android:id="@+id/editexpiry"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:id="@+id/expiryDate"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/calendar_icon" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtdate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/chq_date" />

                            <EditText
                                android:id="@+id/editdate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:id="@+id/chequeDate"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/calendar_icon" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/txtno"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/chq_no" />

                            <EditText
                                android:id="@+id/editno"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="4" >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/txtbank"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/bank_name" />

                               
                                    <Spinner
                                android:id="@+id/editbank"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/btverify"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:text="@string/verify" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:text="@string/payment"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/child4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/child" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/boxborder" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/btndetail"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Detailbtn" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/btnprofile"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Profilbtn" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/btnhabit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Habitsbtn" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/btnlater"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Laterbtn" />

                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/btnpayment"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Paymentbtn" />

                        <TextView
                            android:layout_width="10dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtreader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:text="@string/Reader"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>